--- a/src/data/levels/07_Mappers/02_UxROM/chat/en.yml
+++ b/src/data/levels/07_Mappers/02_UxROM/chat/en.yml
@@ -37,10 +37,10 @@ exercise:
   - 📚  add your `UxROM` class to 📄  ~/code/mappers/mappers.js~
   - |-
     to test this mapper, you can run one of the following games:
-      💦 🏛️  <Bobl>
+      💦 🏛️  <Böbl>
       🦅 🧷  <Crowborg>
       🦟 🍳  <Filthy Kitchen>
-      🌌 🔫  <Isostasy>
+      🌌 🔫  <Isostasy Demo>
       🕊️ 🛰️  <Spacegulls>
       🦸 🤸  <Super Tilt Bro>
       🏭 🔩  <TroubleAt2A03>
