--- a/src/data/levels/07_Mappers/02_UxROM/chat/es.yml
+++ b/src/data/levels/07_Mappers/02_UxROM/chat/es.yml
@@ -36,10 +36,10 @@ exercise:
   - 📚  agrega tu clase `UxROM` a 📄  ~/code/mappers/mappers.js~
   - |-
     para probar este mapper, puedes correr uno de los siguientes juegos:
-      💦 🏛️  <Bobl>
+      💦 🏛️  <Böbl>
       🦅 🧷  <Crowborg>
       🦟 🍳  <Filthy Kitchen>
-      🌌 🔫  <Isostasy>
+      🌌 🔫  <Isostasy Demo>
       🕊️ 🛰️  <Spacegulls>
       🦸 🤸  <Super Tilt Bro>
       🏭 🔩  <TroubleAt2A03>
