--- a/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-zero hit/chat/en.yml
+++ b/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-zero hit/chat/en.yml
@@ -12,6 +12,7 @@ usage:
   messages:
   - games use it to perform <split-screen effects> (for example, having a static HUD at the top and a scrolling background at the bottom)
   - there was a game about a plumber that used that trick 👨 🔧
+  - <{sprite_zero_splitscreen.png}>
   - by placing a coin sprite (sprite zero) on top of a background coin, the PPU triggers a sprite-zero hit when that part of the screen is rendered
   - this allows the game to detect the moment the PPU has reached that specific scanline, and then change the scroll coordinates mid-frame
   responses:
